data/derived/fa15/progs/unify/prog1094.ml.out
Characters 140-141:
  let seen' = if (List.mem seen h) then seen@[h] else seen in
                                              ^
Error: This expression has type 'a list list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list list
